2006-03-05  Johan Dahlin  <jdahlin@async.com.br>

	* setup.py (version): Use the new features

	* kiwi/dist.py: Add support for $sysconfdir and add an install_data
	subclass which replaces variables. Fetch name from distribution object
	instead of subclass. Refactoring and cleanups

2006-03-02  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (_IntConverter.as_string): 
	Do not use a locale specific way of formatting integers.
	
	* tests/test_datatypes.py (IntTest.testAsStringUS) 
	(IntTest.testAsStringUS): Add a test

2006-03-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList.remove): Add an optional select 
	argument to be consistent with append.

	* kiwi/ui/widgets/radiobutton.py (RadioButton._on_group_changed): 
	Emit content changed when any radio button in the group changes

2006-02-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/entry.py:
	* tests/test_comboentry.py:

	Add support for comboentry.select_item_by_data.
	Add tests and remove ComboMixin interface from ProxyComboEntry.
	Rename _create_completion to _get_completion.
	Reorganize methods in comboentry to match the 
	
2006-02-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (_BaseDateTimeConverter.get_format): Remove
	seconds and AM/PM for now, since we don't have enough infrastructure
	to support optional AM/PM.
	(filter_locale): Refactor to a function and replace decimal point
	with a .

	* tests/test_datatypes.py (CurrencyTest.testFormatBR): 
	Add tests for decimal points which are not .

2006-02-23  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/icon.py (IconEntry.deconstruct): 
	Add support for drawing the icon on the left side and when xalign 
	is higher than 0.5, draw the icon on the left side. 
	
	* kiwi/datatypes.py (_BaseDateTimeConverter.from_string): 
	* kiwi/ui/widgets/entry.py (DATE_MASK_TABLE): 
	Add support for datetime.time

	* kiwi/ui/comboentry.py (ComboEntry.prefill): 
	Use entry.prefill