@@ -7,6 +7,9 @@
     <glade-widget-class name="kiwi+ui+widgets+entry+Entry"
                         generic-name="kiwientry"
                         title="Kiwi Entry" />
+    <glade-widget-class name="ProxyDateEntry"
+                        generic-name="kiwidateentry"
+                        title="Kiwi Date Entry" />
     <glade-widget-class name="kiwi+ui+widgets+label+Label"
                         generic-name="kiwilabel"
                         title="Kiwi Label" />
@@ -46,6 +49,7 @@
     <glade-widget-class-ref name="kiwi+ui+widgets+radiobutton+RadioButton"/>
     <glade-widget-class-ref name="kiwi+ui+widgets+spinbutton+SpinButton"/>
     <glade-widget-class-ref name="kiwi+ui+widgets+textview+TextView"/>
+    <glade-widget-class-ref name="ProxyDateEntry"/>
   </glade-widget-group>
   
 </glade-catalog>
